--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,8 @@ name = "pypi"
 [packages]
 django = "*"
 django-extensions = "*"
+django-debug-toolbar = "*"
+django-environ = "*"
 
 [dev-packages]
 
